# flashcards

./: CMakeLists.txt  card.hpp  main.cpp  test.cpp
